--- a/components/SideBar/styles.module.css
+++ b/components/SideBar/styles.module.css
@@ -1,5 +1,5 @@
 .sidebar{
-  border: 3px solid #97DFFC;
+  border: 3px solid #3FC1C9;
   border-left-color: transparent;
   border-top-color: transparent;
   border-bottom-color: transparent;
@@ -25,7 +25,7 @@
   }
 }
 .dark{
-  border: 3px solid black;
+  border: 3px solid #E23E57;
   border-left-color: transparent;
   border-top-color: transparent;
   border-bottom-color: transparent;
